# rinka

./: .gitignore  .indexion.toml  AGENTS.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.indexion/: .gitignore
.target-ci/: .rustc_info.json
.target-ci/debug/: librinka.d  librinka.rlib  librinka_core.d  librinka_core.rlib  librinka_explorer.d  librinka_explorer.rlib  librinka_gtk.d  librinka_gtk.rlib  librinka_headless.d  librinka_headless.rlib  librinka_macos.d  librinka_windows.d  librinka_windows.rlib  librinka_winui.d  librinka_winui.rlib  rinka-explorer  rinka-explorer.d  rinka-windows-fluent-poc  rinka-windows-fluent-poc.d
.target-ci/debug/.fingerprint/bitflags-0ae28ae7fb2ec565/: lib-bitflags  lib-bitflags.json
.target-ci/debug/.fingerprint/bitflags-28a5fbaa436704d7/: lib-bitflags  lib-bitflags.json
.target-ci/debug/.fingerprint/block2-86f1f9017b0127ce/: lib-block2  lib-block2.json
.target-ci/debug/.fingerprint/block2-8c4207784d5ff74b/: lib-block2  lib-block2.json
.target-ci/debug/.fingerprint/block2-9717cbf3bc1571ec/: lib-block2  lib-block2.json
.target-ci/debug/.fingerprint/block2-bb1cd23853e46aac/: lib-block2  lib-block2.json
.target-ci/debug/.fingerprint/cc-fe17fdb863b13fc1/: lib-cc  lib-cc.json
.target-ci/debug/.fingerprint/embed-resource-8242a6c15fd82c46/: lib-embed_resource  lib-embed_resource.json
.target-ci/debug/.fingerprint/find-msvc-tools-31ca5ad5e85c02ea/: lib-find_msvc_tools  lib-find_msvc_tools.json
.target-ci/debug/.fingerprint/libc-a4a6eccbbd977e0e/: lib-libc  lib-libc.json
.target-ci/debug/.fingerprint/libc-b83c27dbd3b703b2/: build-script-build-script-build  build-script-build-script-build.json
.target-ci/debug/.fingerprint/libc-d0106b2f3e977d18/: run-build-script-build-script-build  run-build-script-build-script-build.json
.target-ci/debug/.fingerprint/libc-fd922bba339585ee/: lib-libc  lib-libc.json
.target-ci/debug/.fingerprint/memchr-7b597c46e3b94146/: lib-memchr  lib-memchr.json
.target-ci/debug/.fingerprint/objc2-123800dbb9338317/: dep-lib-objc2  lib-objc2  lib-objc2.json
.target-ci/debug/.fingerprint/objc2-569552a555335242/: build-script-build-script-build  build-script-build-script-build.json
.target-ci/debug/.fingerprint/objc2-7257c8c8eb22c71a/: lib-objc2  lib-objc2.json
.target-ci/debug/.fingerprint/objc2-86b6908415a17582/: run-build-script-build-script-build  run-build-script-build-script-build.json
.target-ci/debug/.fingerprint/objc2-core-foundation-8c015e1205cda849/: lib-objc2_core_foundation  lib-objc2_core_foundation.json
.target-ci/debug/.fingerprint/objc2-core-foundation-b31aa3d2e2252cf5/: lib-objc2_core_foundation  lib-objc2_core_foundation.json
.target-ci/debug/.fingerprint/objc2-encode-ad90d398ac8dbff2/: lib-objc2_encode  (+1 more)
crates/rinka/: Cargo.toml
crates/rinka-core/: Cargo.toml
crates/rinka-core/src/: accelerator.rs  backend.rs  canvas.rs  chord.rs  clipboard.rs  dialog.rs  dock.rs  drag.rs  effect.rs  element.rs  event.rs  lib.rs  menu.rs  menu_bar.rs  pattern.rs  projection.rs  reconcile.rs  runtime.rs  semantics.rs  services.rs  text_editing.rs  text_input.rs  toolbar.rs  validation.rs  window.rs  window_service.rs
crates/rinka-gtk/: Cargo.toml
crates/rinka-gtk/src/: accelerator_mapping.rs  lib.rs  platform.rs
crates/rinka-gtk/src/platform/: backend.rs  clipboard.rs  model.rs  mount.rs  window.rs
crates/rinka-headless/: Cargo.toml
crates/rinka-headless/src/: clipboard.rs  lib.rs  text_input.rs  window_host.rs
crates/rinka-headless/tests/: accelerator_dispatch.rs  canvas_surface.rs  canvas_text_input.rs  clipboard_roundtrip.rs  context_menus.rs  dialog_flow.rs  document_dock.rs  drag_and_drop.rs  image_display.rs  menu_bar.rs  multiline_text_editing.rs  reconciliation.rs  window_lifecycle.rs
crates/rinka-macos/: Cargo.toml
crates/rinka-macos/src/: lib.rs  platform.rs
crates/rinka-macos/src/platform/: application.rs  backend.rs  canvas_surface.rs  collection_delegate.rs  collection_mount.rs  dock_area.rs  drag_drop.rs  image_display.rs  key_dispatch.rs  layout_primitives.rs  menu_bar_host.rs  native_metrics.rs  native_runtime.rs  pasteboard.rs  reconciliation.rs  stack_layout.rs  text_editing.rs
crates/rinka-macos/src/platform/application/: context_menu_probe.rs  delegate.rs  dialog_host.rs  dialog_probe.rs  dock_probe.rs  drag_drop_probe.rs  menu_bar_probe.rs  probes.rs  run.rs  testing.rs  textarea_probe.rs  window_host.rs  window_lifecycle_probe.rs  window_service_host.rs
crates/rinka-macos/tests/: secure_input.rs
crates/rinka-test/: Cargo.toml
crates/rinka-test/src/: capture.rs  error.rs  headless.rs  lib.rs  live.rs  query.rs
crates/rinka-test/tests/: headless_driver.rs
crates/rinka-windows/: Cargo.toml
crates/rinka-windows/src/: lib.rs  platform.rs
crates/rinka-windows/src/platform/: backend_contract.rs  backend_layout.rs  events.rs  native_primitives.rs  native_types.rs  window_host.rs
crates/rinka-winui/: Cargo.toml
crates/rinka-winui/src/: accelerator_mapping.rs  lib.rs  platform.rs
crates/rinka-winui/src/platform/: elements.rs  table_status.rs  toolbar.rs  window_host.rs
crates/rinka/src/: lib.rs
examples/explorer/: Cargo.toml  build.rs
examples/explorer/src/: editor.rs  lib.rs  main.rs  surface.rs  view.rs  windows_contract.rs
examples/explorer/tests/: appkit_harness.rs
examples/windows-fluent-poc/: Cargo.toml  build.rs
examples/windows-fluent-poc/src/: main.rs
packaging/macos/: Info.plist
packaging/windows/: rinka-explorer.manifest  rinka-explorer.rc
scripts/: appkit-accelerator-probe.sh  appkit-clipboard-probe.sh  appkit-dialog-probe.sh  appkit-dock-probe.sh  appkit-drag-drop-probe.sh  appkit-menu-bar-probe.sh  appkit-scene-matrix.sh  appkit-text-input-probe.sh  appkit-transition-matrix.sh  appkit-transition-visual-matrix.sh  appkit-visual-matrix.sh  appkit-window-inventory.swift  appkit-window-lifecycle-probe.sh  bundle-macos.sh  gtk-a11y-probe.py  gtk-gnome-shell-smoke.sh  gtk-panel-a11y-probe.py  gtk-scene-matrix.sh  gtk-wayland-smoke.sh  windows-bootstrap.ps1  windows-scene-matrix.ps1
(+406 files in other folders)
