[workspace]
resolver = "2"
members = [
    "crates/rinka",
    "crates/rinka-core",
    "crates/rinka-headless",
    "crates/rinka-test",
    "crates/rinka-macos",
    "crates/rinka-gtk",
    "crates/rinka-windows",
    "crates/rinka-winui",
    "examples/explorer",
    "examples/windows-fluent-poc",
]
default-members = [
    "crates/rinka",
    "crates/rinka-core",
    "crates/rinka-headless",
    "crates/rinka-test",
    "examples/explorer",
]
[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Rinka contributors"]
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/rinka"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
