[package]
name = "rinka-headless"
description = "Deterministic native-host model for Rinka tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rinka-core = { path = "../rinka-core" }

[lints]
workspace = true
